--- a/baitap0823/index.css
+++ b/baitap0823/index.css
@@ -17,8 +17,6 @@ li{background-color: antiquewhite;
     width: 300px;
     height: 150px;
     padding: 15px;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -31,3 +29,4 @@ li{background-color: antiquewhite;
 }
 h3{padding: 15px;}
 p{margin-left: -15px;}
+span{margin: auto;}
