--- a/baitap0823/index.css
+++ b/baitap0823/index.css
@@ -3,17 +3,21 @@
     padding: 0;
 }
 
-.container{margin: auto;padding: 280px;
+.container {
+    margin: auto;
+    padding: 280px;
 }
 
-ul{display: flex;
+ul {
+    display: flex;
     list-style-type: none;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
 }
 
-li{background-color: antiquewhite;
+li {
+    background-color: antiquewhite;
     width: 300px;
     height: 150px;
     padding: 15px;
@@ -21,12 +25,26 @@ li{background-color: antiquewhite;
     text-align: center;
     align-items: center;
 }
-.material-symbols-outlined{border: 2px solid rgb(20, 134, 187) ;
-     border-radius: 50%;
-     width: 50px;height: 50px;
-    display: flex; justify-content: center; align-items: center; 
+
+.material-symbols-outlined {
+    border: 2px solid rgb(20, 134, 187);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: rgb(20, 134, 187);
 }
-h3{padding: 15px;}
-p{margin-left: -15px;}
-span{margin: auto;}
+
+h3 {
+    padding: 15px;
+}
+
+p {
+    margin-left: -15px;
+}
+
+span {
+    margin: auto;
+}
